# gradience

./: .clinerules  .env.example  .gitignore  .gitmodules  .prettierignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_IMPLEMENTATION_GAP_ANALYSIS.md  CODE_OF_CONDUCT.md  COMPONENTS_GAPS_SUMMARY.md  CONTRIBUTING.md  CONVENTIONS.md  CRITICAL_TODOS.md  DEVNET_TEST_REPORT.md  FINAL_IMPLEMENTATION_STATUS.md  GEMINI.md  LICENSE  METHODOLOGY.md  PROJECT_REVIEW_REPORT.md  PROJECT_REVIEW_UPDATE_20250402.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_FIX_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SECURITY.md  TODO_CHECKLIST.md  TODO_IMPLEMENTATION_GUIDE.md  VIRTUALS_COMPARISON.md  W3_PRODUCT_ROADMAP.md  WHITEPAPER.md  agent-me-local-only.md  agent-me.md  agent-social.md  agentme-companion-vision.md  asset-philosophy.md  beam-grant-application.md  chain-selection-analysis.md  (+21 more)
apps/a2a-protocol/program/: Cargo.toml
apps/a2a-protocol/program/src/: lib.rs  utils.rs
apps/a2a-protocol/program/src/instructions/: create_subtask_order.rs
apps/a2a-protocol/tests/: Cargo.toml
apps/a2a-protocol/tests/src/: lib.rs  test_a2a_core.rs
apps/a2a-protocol/tests/src/utils/: mod.rs
apps/agent-arena/indexer/: Cargo.toml  Dockerfile  docker-compose.yml
apps/agent-arena/indexer/docs/: 01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-test-spec.md  06-implementation.md  07-review-report.md  api-reference.md
apps/agent-arena/indexer/migrations/: 0001_init.sql  0002_judge_pool_members.sql  0003_tasks_poster_index.sql  0004_agent_profiles.sql  0005_chain_hub_tables.sql
apps/agent-arena/indexer/mock/: webhook.json
apps/agent-arena/indexer/src/: config.rs  db.rs  events.rs  main.rs  mappers.rs  solana_subscriber.rs  triton_client.rs  utils.rs  webhook.rs
apps/agent-arena/indexer/worker/: tsconfig.json  wrangler.toml
apps/agent-arena/indexer/worker/src/: index.ts  types.ts
apps/agent-arena/tests/integration-tests/: Cargo.toml
apps/agentm-core/program/: Cargo.toml
apps/agentm-core/program/src/: constants.rs  errors.rs  lib.rs  state.rs
apps/agentm-core/program/tests/: README.md
apps/chain-hub/: Cargo.toml  agenttoken-design.md  asset-philosophy.md  chain-selection-analysis.md  justfile  skill-protocol.md  solana-hackathon-prep.md
apps/chain-hub/docs/: 01-prd.md  02-architecture.md  03-technical-spec.md  04-task-breakdown.md  05-test-spec.md  06-implementation.md  07-review-report.md  api-reference.md  autolab-integration.md  quickstart.md  sql-query-guide.md
apps/chain-hub/indexer/: .env.example  docker-compose.yml
apps/chain-hub/indexer-service/: .env.example  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
apps/chain-hub/indexer-service/migrations/: 0001_init.sql  0002_arena.sql
apps/chain-hub/indexer-service/scripts/: health-check.sh  start-with-solana.sh
apps/chain-hub/indexer-service/src/: arena_decoder.rs  arena_poller.rs  config.rs  db.rs  events.rs  handlers.rs  main.rs  mappers.rs  solana_subscriber.rs  utils.rs  webhook.rs
apps/chain-hub/indexer/migrations/: 001_initial_schema.sql  002_seed_data.sql
apps/chain-hub/program/: Cargo.toml
apps/chain-hub/program-backup/src/: entrypoint.rs  state.rs
apps/chain-hub/program/src/: constants.rs  entrypoint.rs  errors.rs  lib.rs  state.rs  utils.rs
apps/chain-hub/sdk/: client.ts  goldrush.test.ts  goldrush.ts  index.ts  invoke.test.ts  key-vault.test.ts  key-vault.ts  router.ts  royalty.test.ts  royalty.ts  types.ts
apps/chain-hub/tests/integration-tests/: Cargo.toml
programs/: Cargo.toml  README.md  sandbox_report.json  sandbox_results.json
programs/a2a-protocol/src/: constants.rs
programs/a2a-protocol/src/instructions/: archive_thread.rs  cooperative_close_channel.rs  initialize_network_config.rs  mod.rs  open_channel.rs  open_channel_dispute.rs  resolve_channel_dispute.rs  settle_subtask.rs  submit_subtask_bid.rs
programs/agent-arena/: Cargo.toml  program-keypair.json
programs/agent-arena/docs/: 03-technical-spec-update-reputation-from-evm.md  04-task-breakdown-update-reputation-from-evm.md  05-test-spec-update-reputation-from-evm.md  06-implementation-update-reputation-from-evm.md  07-review-report-update-reputation-from-evm.md
programs/agent-arena/src/: constants.rs  entrypoint.rs  errors.rs  lib.rs  vrf.rs
programs/agent-arena/src/events/: judge_unstaked.rs
programs/agent-arena/src/instructions/: definition.rs  mod.rs
programs/agent-arena/src/judge/: mod.rs
programs/agent-arena/src/state/: agent_layer.rs  mod.rs
programs/agent-arena/src/traits/: instruction.rs
programs/agentm-core/: Cargo.toml  DEPLOYMENT.md
programs/agentm-core/src/: state.rs
programs/agentm-core/src/instructions/: follow_user.rs  update_profile.rs
programs/agentm-core/tests/: README.md  agentm_core_tests.rs  unit_tests.rs
programs/chain-hub/: Cargo.toml
programs/chain-hub/src/: constants.rs  entrypoint.rs  state.rs  utils.rs
programs/chain-hub/src/instructions/: activate_delegation_task.rs  cancel_delegation_task.rs  delegation_task.rs  mod.rs  record_delegation_execution.rs  register_protocol.rs  register_skill.rs  submit_external_evaluation.rs  update_protocol_status.rs  upgrade_config.rs
programs/idl/: gradiences.json  pinocchio_counter.json
programs/reputation-sandbox/: Cargo.toml
programs/reputation-sandbox/src/: main.rs
programs/workflow-marketplace/: COMPLETION_REPORT.md  Cargo.toml  DEPLOYMENT.md  PHASE5_REPORT.md  TEST_REPORT.md  build.rs
programs/workflow-marketplace/scripts/: package-lock.json  package.json  test-instructions.ts  test-phase5.ts
programs/workflow-marketplace/src/: constants.rs  entrypoint.rs  errors.rs  lib.rs  minimal.rs
programs/workflow-marketplace/src/instructions/: activate_workflow.rs  create_workflow.rs  deactivate_workflow.rs  delete_workflow.rs  initialize.rs  mod.rs  purchase_workflow.rs  purchase_workflow_v2.rs  record_execution.rs  review_workflow.rs  toggle_workflow.rs  update_workflow.rs
programs/workflow-marketplace/src/state/: mod.rs
programs/workflow-marketplace/src/utils/: mod.rs
(+3390 files in other folders)
