[workspace]
members = [
    "a2a-protocol",
    "agent-arena",
    "chain-hub",
    "agentm-core",
    "workflow-marketplace",
    "reputation-sandbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[workspace.dependencies]
pinocchio = { version = "^0.10.1", features = ["copy"] }
pinocchio-system = "^0.5.0"
pinocchio-token = "0.5"
pinocchio-token-2022 = "^0.2"
pinocchio-associated-token-account = "^0.3"
pinocchio-log = "^0.5.1"
solana-address = { version = "^2.5.0", features = ["curve25519"] }
borsh = { version = "^1.6.0", features = ["derive"] }
thiserror = "^2.0.17"
codama = "^0.7.2"
serde_json = "^1.0.145"
const-crypto = "^0.3.0"
num-derive = "^0.4.0"
num-traits = "^0.2.0"
anyhow = "^1.0.100"
axum = { version = "^0.8.6", features = ["ws"] }
base64 = "^0.22.1"
bs58 = "^0.5.1"
serde = { version = "^1.0.228", features = ["derive"] }
tokio = { version = "^1.48.0", features = ["full"] }
tokio-postgres = "^0.7.15"
litesvm = "0.6"
solana-sdk = "2.2"
sha3 = "0.10"
rand = "0.8"
chrono = "0.4"
hex = "0.4"
