[workspace]
members = ["program", "tests/integration-tests"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[workspace.dependencies]
pinocchio = { version = "^0.10.1", features = ["copy"] }
pinocchio-system = "^0.5.0"
solana-address = { version = "^2.5.0" }
borsh = { version = "^1.6.0", features = ["derive"] }
thiserror = "^2.0.17"
