[package]
name = "chain-hub"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
no-entrypoint = []

[dependencies]
pinocchio = { workspace = true, features = ["cpi", "copy"] }
pinocchio-system = { workspace = true }
borsh = { workspace = true }
thiserror = { workspace = true }
