[package]
name = "reputation-sandbox"
version = "0.1.0"
edition = "2021"
authors = ["Gradience Protocol Team"]
description = "Sandbox for testing Gradience reputation algorithm with mock data"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha3 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[[bin]]
name = "reputation-sandbox"
path = "src/main.rs"
