[package]
name = "gradience-indexer"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
