[package]
name = "agentm-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi", "copy"] }
pinocchio-system = "^0.5.0"
pinocchio-token = "^0.5"
borsh = { version = "^1.6.0", features = ["derive"] }

[dev-dependencies]
litesvm = "0.9.0"
solana-sdk = "3.0.0"
