[package]
name = "chain-hub-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
bs58 = "0.5"
chrono = "0.4"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = "0.7"
tokio-tungstenite = "0.23"
tracing = "0.1"
url = "2.5"

[[bin]]
name = "chain-hub-indexer"
path = "src/main.rs"
