[package]
name = "tests-chain-hub"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
litesvm = "^0.9.0"
chain-hub = { path = "../../program", features = ["no-entrypoint"] }
borsh = { workspace = true }
solana-sdk = "3.0.0"
solana-program = "3.0.0"
solana-account = "~3.2"
solana-system-interface = "3.0.0"
